--- a/_config.yml
+++ b/_config.yml
@@ -76,6 +76,7 @@ author:
   xing             : # Username
   youtube          : # Username
   zhihu            : # Username
+  cv               : "files/CV.pdf"
 
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
