Update position and employer

--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,9 @@ author:
   avatar           : "bio-photo.jpg"
   name             : "Yik Lung Pang"
   pronouns         : # example: "she/her"  
-  bio              : "Research assistant"
+  bio              : "Robot Learning Engineer"
   location         : "London, UK"
-  employer         : "Queen Mary University of London"
+  employer         : "Neuracore"
   uri              : # URL
   email            : "y.l.pang@qmul.ac.uk" 
 
